2007-08-13  Alexey Shusharin <mrfinch@mail.ru>

	* include/config_keys.h: Added key set setting CAN callback
	configuration.
	
2006-09-21  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/config_keys.h: Merge from eCosCentric repository.
	ChangeLogs incorporated in correct location below.

2006-02-15  Uwe Kindler  <uwe_kindler@web.de>

	* include/config_keys.h Replaced CAN configuration keys
	CYG_IO_SET_CONFIG_CAN_REMOTE_BUF, 
	CYG_IO_SET_CONFIG_CAN_FILTER_ALL and
	CYG_IO_SET_CONFIG_CAN_FILTER_MSG with new single config key
	CYG_IO_SET_CONFIG_CAN_MSGBUF

2005-12-02  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/iosys.c: 
	* include/devtab.h: Add comments that bread/bwrite takes there
	parameters in blocks, not bytes.

2005-09-11  Uwe Kindler  <uwe_kindler@web.de>

	* include/config_keys.h Configuration keys for CAN driver added. 
	
2005-01-19  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/config_keys.h: Add device close key.

2004-12-23  Peter Korsgaard  <jacmet@sunsite.dk>

	* doc/io.sgml: Match CYG_TTY_IN_FLAGS_ECHO and
	CYG_TTY_IN_FLAGS_BINARY values with source code.

2004-09-21  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/io.sgml: Rename incorrect cyg_drv_mutex to cyg_drv_mutex_t.
	Ditto cyg_drv_cond and cyg_drv_cond_t.

2004-04-16  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/iosys.c (cyg_io_lookup): Use union to avoid aliasing problems
	with compiler.

2004-04-15  Nick Garnett  <nickg@ecoscentric.com>

	* include/config_keys.h: Added CYG_IO_SET_CONFIG_DISK_MOUNT and
	CYG_IO_SET_CONFIG_DISK_UMOUNT keys.

2004-01-19  Nick Garnett  <nickg@ecoscentric.com>

	* include/config_keys.h (CYG_IO_GET_CONFIG_DISK_INFO): Added DISK
	IO config key base definition.

2003-11-27  David Woodhouse  <dwmw2@infradead.org>

	* include/config_keys.h: Add CYG_IO_SET_CONFIG_FLASH_FIS_NAME

2003-11-06   Billy <billy@babababa.net>

	* doc/io.sgml: In the TTY section swap "\n\r" to "\r\n" to match
	reality.
	
2003-03-25  Jonathan Larmour  <jifl@eCosCentric.com>
